force-app/main/default/objects/Preferences__c/Preferences__c.object-meta.xml
<CustomObject>
    <description>For a given date these are the preferences that a person might have. Keep in mind a person&apos;s preferences will change overtime and it&apos;s important to keep a history. For example, their preferred hair length might change overtime.</description>
    <label>Preference</label>
    <nameField>
        <displayFormat>PREF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>