force-app/main/default/objects/Preferences__c/fields/Allergies_Notes__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Notes__c</fullName>
    <label>Allergies/Notes</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Any allergies or special notes about customer's hair/scalp</description>
    <inlineHelpText>Note any allergies or special considerations</inlineHelpText>
</CustomField>