force-app/main/default/objects/Preferences__c/fields/Chemical_Treated__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Treated__c</fullName>
    <label>Chemical Treated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether customer's hair has been chemically treated</description>
    <inlineHelpText>Has the customer's hair been colored, permed, or chemically treated?</inlineHelpText>
</CustomField>