force-app/main/default/objects/Preferences__c/fields/Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <type>Picklist</type>
    <description>How customer prefers to receive reminders and updates</description>
    <inlineHelpText>How should we contact this customer?</inlineHelpText>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>