force-app/main/default/objects/Preferences__c/fields/Hair_Length__c.field-meta.xml
<CustomField>
    <fullName>Hair_Length__c</fullName>
    <label>Hair Length</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>