force-app/main/default/objects/Preferences__c/fields/Hair_Texture__c.field-meta.xml
<CustomField>
    <fullName>Hair_Texture__c</fullName>
    <label>Hair Texture</label>
    <type>Picklist</type>
    <description>Thickness of individual hair strands</description>
    <inlineHelpText>Fine, medium, or coarse hair?</inlineHelpText>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Coarse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>