force-app/main/default/objects/Preferences__c/fields/Hair_Type__c.field-meta.xml
<CustomField>
    <fullName>Hair_Type__c</fullName>
    <label>Hair Type</label>
    <type>Picklist</type>
    <description>Customer's hair type</description>
    <inlineHelpText>What type of hair does the customer have?</inlineHelpText>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Straight</fullName>
            </value>
            <value>
                <fullName>Wavy</fullName>
            </value>
            <value>
                <fullName>Curly</fullName>
            </value>
            <value>
                <fullName>Coily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>