force-app/main/default/objects/Preferences__c/fields/Preference_Date__c.field-meta.xml
<CustomField>
    <fullName>Preference_Date__c</fullName>
    <label>Preference Date</label>
    <type>Date</type>
    <description>Date these preferences were recorded</description>
    <inlineHelpText>When were these preferences captured?</inlineHelpText>
</CustomField>