force-app/main/default/objects/Preferences__c/fields/Preferred_Stylist__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Stylist__c</fullName>
    <label>Preferred Stylist</label>
    <type>Lookup</type>
    <referenceTo>Stylist__c</referenceTo>
    <relationshipLabel>Customer Preferences</relationshipLabel>
    <relationshipName>Preferences</relationshipName>
    <description>Customer's preferred stylist</description>
    <inlineHelpText>Which stylist does this customer prefer?</inlineHelpText>
</CustomField>