force-app/main/default/objects/Preferences__c/fields/Scalp_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Scalp_Sensitivity__c</fullName>
    <label>Scalp Sensitivity</label>
    <type>Picklist</type>
    <description>Customer's scalp sensitivity level</description>
    <inlineHelpText>Important for product selection</inlineHelpText>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Sensitive</fullName>
            </value>
            <value>
                <fullName>Very Sensitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>